# cultural-dynamics-gan

./: README.md  paper.md  placemotiongan:model.py  placemotiongan:scheduler.py  placemotiongan:train.py  pyproject.toml  references.bib  tests:test_train_step.py
analyses/: sensitivity.py
placemotiongan/: __init__.py  cli.py  config.py  losses.py  model.py  scheduler.py  train.py
tests/: test_model.py  test_scheduler.py  test_train.py  test_train_step.py
