[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "placemotiongan"
version = "1.0.0"
description = "PlaceEmotion-GAN: cultural dynamics GAN for emotional niche construction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Ayaka Onohara", email = "aonoa68@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "torch",
  "pyyaml"
]

[project.urls]
Homepage = "https://github.com/aonoa68/cultural-dynamics-gan"
Repository = "https://github.com/aonoa68/cultural-dynamics-gan"

[project.scripts]
placemotiongan = "placemotiongan.cli:main"

[tool.setuptools]
packages = ["placemotiongan"]
